--- a/style/main.css
+++ b/style/main.css
@@ -64,7 +64,7 @@ th {
   letter-spacing: 0.5px;
 }
 
-tr {
+.gtr {
   border-bottom: 1px solid rgba(157, 78, 221, 0.1);
   transition: all 0.3s ease;
 }
@@ -217,12 +217,11 @@ td:first-child {
   left: 36px;
   top: 28px;
 
-  /* Новые свойства */
   overflow-y: auto; /* Вертикальный скролл при необходимости */
   overflow-x: hidden; /* Запрет горизонтального скролла */
   white-space: normal; /* Автоматический перенос строк */
   word-wrap: break-word; /* Перенос длинных слов */
-  z-index: 1000; /* Гарантированно поверх других элементов */
+  z-index: 1000; 
 }
 .wallet_card{
   background: url(../src/test.webp);
@@ -243,8 +242,12 @@ td:first-child {
   margin-bottom: 15vh;
   position: fixed;
   z-index: 10;
-  /*display:none;*/
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  word-wrap: break-word;
 }
+
 .wallet-card-header {
     padding: 20px 25px;
     color: #9CFF2E;
@@ -568,7 +571,7 @@ td:first-child {
   justify-content: space-between;
   font-size: 12px;
 }
-th {
+.gth {
   color: #fff;
   border: 1px solid #4361EE !important;
 
